--- a/src/components/style.css
+++ b/src/components/style.css
@@ -199,23 +199,16 @@ html {
   box-shadow: inset 0px 0px 0px -15px var(--background-color);
   transition: all 300ms ease-out;
   text-transform: capitalize;
+  margin: 5px;
+  border-radius: 0.5rem;
 }
-.btn-group__item:last-child {
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-.btn-group__item:first-child {
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-}
-.btn-group__item:hover,
-.btn-group__item:focus {
+
+.btn-group__item:focus{
   color: var(--background-color);
   box-shadow: inset 0px -20px 0px -15px var(--background-color);
-}
-.btn-group__item:focus {
   outline: none;
 }
+
 .btn-group__item:after {
   content: "✔️";
   margin-left: 0.5rem;
@@ -226,6 +219,7 @@ html {
   opacity: 0;
   transition: all 200ms ease-out;
 }
+
 .btn-group__item--active:after {
   opacity: 1;
   transform: translatey(-2px);
